# BasicRayTracer

./: .gitignore  CMakeLists.txt  README.md
imaging/: CMakeLists.txt  color.cpp  color.h  hittable.cpp  hittable.h  ray.h
math/: CMakeLists.txt  vec.cpp  vec.h
primitives/: CMakeLists.txt  sphere.cpp  sphere.h
src/: main.cpp
